feat: 完成用户模块，鉴权以及部分前端